--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         src="./assets/linkedin.png"
         alt="My LinkedIn profile"
         class="icon"
-        onclick="location.href='https:www.linkedin.com/in/adarsh-honnavar-80482a258'"
+        onclick="location.href='https://www.linkedin.com/in/adarsh-honnavar-80482a258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app'"
       />
       <img
         src="./assets/github.png"
@@ -370,7 +370,7 @@
       </ul>
     </div>
   </nav>
-  <p>Copyright &#169; 2024 Adarsh. All Rights Reserved.</p>
+  <p>Copyright &#169; 2024 Adarsh Honnavar. All Rights Reserved.</p>
 </footer>
 <script src="script.js"></script>
 </body>
