--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="./assets/project-1.png"
+            src="calculator.png"
             alt="Project 1"
             class="project-img"
           />
@@ -268,7 +268,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/ADARSH0104/Calculator'"
           >
             Github
           </button>
