--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           </button>
           <button
             class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://adarsh0104.github.io/Calculator/'"
           >
             Live Demo
           </button>
